--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -1,5 +1,7 @@
-.container {
+.landing {
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  justify-content: center;
+  border: soldi thin #96AFB8;
 }
+
+
