--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,36 @@
 body{
-  background-color: #96AFB8;
+  background-color: #FFA68B;
+  color: #534439;
+  font-family: 'Cormorant Garamond', serif;
 }
 
 .App-header{
-  background-color: #334A52;
+  background-color: #534439;
   color: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  height: 70px;
 }
 
 .navLink{
+  font-size: large;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  color: #E6F4F1;
+  color: white;
   text-decoration: none;
-  padding: 0px 50px 0px 20px;
+  padding: 0px 50px 0px 50px;
 }
 
 .navbar{
   display: flex;
   flex-direction: row;
+}
+
+.navLink:hover{
+  background-color: #FFF6EC;
+  color: #534439;
+  border-radius: 80px;
 }
