--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,5 +1,6 @@
 .projectCard{
-  background-color: #FFE9CF;
+  background-color: #C0ADA0;
+  color: black;
   display: flex;
   justify-content: center;
   border: solid thin #534439;
