--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -9,12 +9,17 @@
 }
 
 .projectTitle{
-  border: solid thin #534439;
+  /* border: solid thin #534439; */
 }
 
 .addItem{
-  border: solid thin #534439;
+  /* border: solid thin #534439; */
   margin: 5px 0px 5px 0px;
+}
+
+.addItemTag{
+  display: flex;
+  justify-content: center;
 }
 
 .days{
