--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,4 +1,4 @@
-.projectCard{
+/* .projectCard{
   background-color: #C0ADA0;
   color: black;
   display: flex;
@@ -11,4 +11,9 @@
   border: solid thin #534439;
   margin: 10px;
   padding: 5px;
+} */
+
+.button {
+  padding-top: 0;
+  padding-bottom: 0;
 }
