--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+button {
+  padding: 5px;
+  background-color: rgba(71, 45, 45, 0.65);
+  border-radius: 5px;
+  margin: 5px;
+  color: whitesmoke;
+  
+}
