--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -7,4 +7,17 @@
   margin: 30px 50px 30px 50px;
 }
 
+.projectCard{
+  background-color: #C0ADA0;
+  color: black;
+  display: flex;
+  justify-content: center;
+  border: solid thin #534439;
+  margin: 5px 100px 5px 100px;
+}
 
+.projectEntry{
+  border: solid thin #534439;
+  margin: 10px;
+  padding: 5px;
+}
