--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,19 @@ button {
   color: whitesmoke;
   
 }
+
+input {
+  height: 20px;
+  border-radius: 5px;
+  margin: 5px;
+  border: none;
+  font-size: 12px;
+}
+
+select {
+  height: 20px;
+  border-radius: 5px;
+  margin: 5px;
+  border: none;
+  font-size: 12px;
+}
